# PaymentEngine

./: .gitignore  Cargo.toml  README.md
csv/: transactions.csv
scripts/: test_concurrent_verbose.sh  test_server.sh
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
src/domain/: mod.rs  transaction.rs  user_account.rs
src/services/: mod.rs  payment_engine.rs  trx_processor.rs
tests/: cli_tests.rs  integration_tests.rs  performance_tests.rs
tests/expected/: basic_expected.csv  comprehensive_all_types_expected.csv  dispute_resolve_expected.csv
tests/fixtures/: basic.csv  comprehensive_all_types.csv  dispute_resolve.csv  invalid_ops.csv  large_test.csv  parsing_test.csv  precision.csv
